Finish mobile version with hover states

--- a/index.html
+++ b/index.html
@@ -16,16 +16,81 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    How many team members can I invite? You can invite up to 2 additional users
-    on the Free plan. There is no limit on team members for the Premium plan.
-    What is the maximum file upload size? No more than 2GB. All files in your
-    account must fit your allotted storage space. How do I reset my password?
-    Click “Forgot password” from the login page or “Change password” from your
-    profile page. A reset link will be emailed to you. Can I cancel my
-    subscription? Yes! Send us a message and we’ll process your request no
-    questions asked. Do you provide additional support? Chat and email support
-    is available 24/7. Phone lines are open during normal business hours.
+    <main>
+      <section class="card">
+        <img
+          src="./images/illustration-woman-online-mobile.svg"
+          alt="Tech diagram"
+          class="card__image--1"
+        />
+        <img
+          src="./images/bg-pattern-mobile.svg"
+          alt="Tech diagram"
+          class="card__image--2"
+        />
+        <div class="card__content">
+          <h1 class="card__title">FAQ</h1>
+          <ul class="faq__list">
+            <li class="faq__item faq__item1">
+              <div class="faq__titleBox">
+                <p class="faq__title">How many team members can I invite?</p>
+                <img src="./images/icon-arrow-down.svg" alt="Arrow" />
+              </div>
+              <p class="faq__text hide">
+                You can invite up to 2 additional users on the Free plan. There
+                is no limit on team members for the Premium plan.
+              </p>
+              <div class="line"></div>
+            </li>
+            <li class="faq__item faq__item2">
+              <div class="faq__titleBox">
+                <p class="faq__title">What is the maximum file upload size?</p>
+                <img src="./images/icon-arrow-down.svg" alt="Arrow" />
+              </div>
+              <p class="faq__text hide">
+                No more than 2GB. All files in your account must fit your
+                allotted storage space.
+              </p>
+              <div class="line"></div>
+            </li>
+            <li class="faq__item faq__item3">
+              <div class="faq__titleBox">
+                <p class="faq__title">How do I reset my password?</p>
+                <img src="./images/icon-arrow-down.svg" alt="Arrow" />
+              </div>
+              <p class="faq__text hide">
+                Click “Forgot password” from the login page or “Change password”
+                from your profile page. A reset link will be emailed to you.
+              </p>
+              <div class="line"></div>
+            </li>
 
+            <li class="faq__item faq__item4">
+              <div class="faq__titleBox">
+                <p class="faq__title">Can I cancel my subscription?</p>
+                <img src="./images/icon-arrow-down.svg" alt="Arrow" />
+              </div>
+              <p class="faq__text hide">
+                Yes! Send us a message and we'll process your request no
+                questions asked.
+              </p>
+              <div class="line"></div>
+            </li>
+            <li class="faq__item faq__item5">
+              <div class="faq__titleBox">
+                <p class="faq__title">Do you provide additional support?</p>
+                <img src="./images/icon-arrow-down.svg" alt="Arrow" />
+              </div>
+              <p class="faq__text hide">
+                Chat and email support is available 24/7. Phone lines are open
+                during normal business hours.
+              </p>
+              <div class="line"></div>
+            </li>
+          </ul>
+        </div>
+      </section>
+    </main>
     <script src="./app.js"></script>
   </body>
 </html>
