Finish desktop version

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <img
+      src="./images/illustration-box-desktop.svg"
+      alt="Box illustration"
+      class="card__image--3 hide"
+    />
     <main>
       <section class="card">
         <img
@@ -29,8 +34,8 @@
           class="card__image--2"
         />
         <div class="card__content">
-          <h1 class="card__title">FAQ</h1>
           <ul class="faq__list">
+            <h1 class="card__title">FAQ</h1>
             <li class="faq__item faq__item1">
               <div class="faq__titleBox">
                 <p class="faq__title">How many team members can I invite?</p>
